--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Resume</title>
+<title>Resume Sibasis Mukherjee</title>
 <link type="text/css" rel="stylesheet" href="css/green.css" />
 <link type="text/css" rel="stylesheet" href="css/print.css" media="print"/>
 <!--[if IE 7]>
@@ -42,7 +42,7 @@
             <ul>
               <li class="ad">Mittenwalder Straße 30, 10961 Berlin</li>
               <li class="mail">mukherjee.sibasis@yahoo.com</li>
-              <li class="tel">+47 47725263</li>
+              <li class="tel">+49 15736584093, +47 47725263</li>
               <li class="web">sibasismukherjee.github.io</li>
             </ul>
           </div>
@@ -50,11 +50,10 @@
           <!-- Begin Social -->
           <div class="social">
             <ul>
-              <li><a class='north' href="javascript:window.print()" title="Print Or Save as a pdf "><img src="images/icn-print.jpg" alt="Print Or Save as a pdf" /></a></li>
-              <li><a class='north' id="contact" href="contact/index.html" title="Contact Me"><img src="images/icn-contact.jpg" alt="" /></a></li>
+              <li><a class='north' href="https://sibasismukherjee.github.io/sibasismukherjee-github-io.pdf" title="Print as a pdf"><img src="images/icn-print.jpg" alt="Download as a pdf"/></a></li>
               <li><a class='north' href="https://twitter.com/Sibasis79487584" title="Follow me on Twitter"><img src="images/icn-twitter.jpg" alt="" /></a></li>
               <li><a class='north' href="https://github.com/sibasismukherjee" title="Github"><img src="images/github.png" alt="Github" /></a></li>
-              <li><a class='north' href="https://www.linkedin.com/in/sibasis-mukherjee-b7a66655/" title="My LinkedIn Profile"><img src="images/linkedin.png" alt="" /></a></li>
+              <li><a class='north' href="https://www.linkedin.com/in/sibasis-mukherjee" title="My LinkedIn Profile"><img src="images/linkedin.png" alt="" /></a></li>
             </ul>
           </div>
           <!-- End Social -->
