--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <li>AWS Managed Services</li>
               <li>Terraform</li>
               <li>Hashicorp Vault</li>
-              <li>Serverless Application Model</li>
+              <li>SAM</li>
               <li>CI/CD tools: Concourse, Jenkins, XLDeploy</li>
               <li>Ops Tools: OpsGenie, ELK stack, Dynatrace, Splunk and Datadog</li>
               <li>Agile Tools: Atlassian Toolchain</li>
