update new cert
Signed-off-by: sibasismukherjee <mukherjee.sibasis@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         		<li><a href="https://www.credly.com/badges/0d0889d4-0703-4394-8503-ce8d392460b4/public_url" title="AWS Solutions Architect Associate"><img src="images/aws.png" alt=""/></a></li>
             <li><a href="https://www.credly.com/badges/cc7782b4-0e14-4f65-9000-faab57d42e9b/linked_in" title="Hashicorp Certified Terraform Associate"><img src="images/hashicorp.png" alt=""/></a></li>
         		<li><a href="https://courses.edx.org/certificates/c170363beb5a40c784860e49882ced35" title="edX certificate for Introduction to computing"><img src="images/edx.png" alt=""/></a></li>
+            <li><a href="https://www.credly.com/badges/18c9b287-28b9-4c24-b17d-b852e9d7f53f/public_url" title="AWS Solutions Architect Professional"><img src="images/aws-pro.png" alt=""/></a></li>
         	</ul>
         </div>
         <!-- Begin 5th Row -->
